<resources>
    <string name="app_name">VTB-finances</string>
    <string name="act_registration_name">Имя</string>
    <string name="act_registration_mail">Email</string>
    <string name="act_registration_password">Пароль</string>
    <string name="act_registration_title">Регистрация</string>
    <string name="act_registration_btn">Зарегистрироваться</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="item_news_header">Новости</string>
</resources>